# Enchanted-Climber

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: Constants.h  Game.cpp  Game.h  Types.h
src/entities/: Collectible.cpp  Collectible.h  Entity.h  Platform.cpp  Platform.h  Player.cpp  Player.h
src/managers/: AchievementManager.cpp  AchievementManager.h  AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  SaveManager.cpp  SaveManager.h  ThemeManager.cpp  ThemeManager.h
src/rendering/: AnimationSystem.cpp  AnimationSystem.h  ParticleSystem.cpp  ParticleSystem.h  UIRenderer.cpp  UIRenderer.h
src/states/: CharacterSelectState.cpp  CharacterSelectState.h  GameOverState.cpp  GameOverState.h  GameState.h  MenuState.cpp  MenuState.h  PausedState.cpp  PausedState.h  PlayingState.cpp  PlayingState.h  ShopState.cpp  ShopState.h
src/systems/: CameraSystem.cpp  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  PlatformGenerator.cpp  PlatformGenerator.h  ScoreSystem.cpp  ScoreSystem.h
src/ui/: Button.cpp  Button.h  HUD.cpp  HUD.h  Theme.cpp  Theme.h
